runtime/gen/basis-ffi.h

MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_Math_pow(Real64_t,Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_Math_sin(Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_Math_sinh(Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_Math_sqrt(Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_Math_tan(Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_Math_tanh(Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_modf(Real64_t,Ref(Real64_t));
MLTON_CODEGEN_STATIC_INLINE void Real64_move(Ref(Real64_t),Ref(Real64_t));
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_mul(Real64_t,Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_muladd(Real64_t,Real64_t,Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_mulsub(Real64_t,Real64_t,Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_neg(Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_round(Real64_t);
MLTON_CODEGEN_STATIC_INLINE void Real64_store(Ref(Real64_t),Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_sub(Real64_t,Real64_t);
C_Errno_t(C_Int_t) Socket_accept(C_Sock_t,Array(Word8_t),Ref(C_Socklen_t));
extern const C_Int_t Socket_AF_INET;
extern const C_Int_t Socket_AF_INET6;
extern const C_Int_t Socket_AF_UNIX;
extern const C_Int_t Socket_AF_UNSPEC;
C_Errno_t(C_Int_t) Socket_bind(C_Sock_t,Vector(Word8_t),C_Socklen_t);
C_Errno_t(C_Int_t) Socket_close(C_Sock_t);
C_Errno_t(C_Int_t) Socket_connect(C_Sock_t,Vector(Word8_t),C_Socklen_t);
C_Errno_t(C_Int_t) Socket_Ctl_getPeerName(C_Sock_t,Array(Word8_t),Ref(C_Socklen_t));
C_Errno_t(C_Int_t) Socket_Ctl_getSockName(C_Sock_t,Array(Word8_t),Ref(C_Socklen_t));
extern const C_Int_t Socket_Ctl_SO_ACCEPTCONN;
extern const C_Int_t Socket_Ctl_SO_BROADCAST;
extern const C_Int_t Socket_Ctl_SO_DEBUG;
extern const C_Int_t Socket_Ctl_SO_DONTROUTE;
extern const C_Int_t Socket_Ctl_SO_ERROR;
extern const C_Int_t Socket_Ctl_SO_KEEPALIVE;
extern const C_Int_t Socket_Ctl_SO_LINGER;
extern const C_Int_t Socket_Ctl_SO_OOBINLINE;
extern const C_Int_t Socket_Ctl_SO_RCVBUF;
extern const C_Int_t Socket_Ctl_SO_RCVLOWAT;
extern const C_Int_t Socket_Ctl_SO_RCVTIMEO;
extern const C_Int_t Socket_Ctl_SO_REUSEADDR;
extern const C_Int_t Socket_Ctl_SO_SNDBUF;
extern const C_Int_t Socket_Ctl_SO_SNDLOWAT;
extern const C_Int_t Socket_Ctl_SO_SNDTIMEO;
extern const C_Int_t Socket_Ctl_SO_TYPE;
extern const C_Int_t Socket_Ctl_SOL_SOCKET;
C_Int_t Socket_familyOfAddr(Vector(Word8_t));
C_Errno_t(C_Int_t) Socket_GenericSock_socket(C_Int_t,C_Int_t,C_Int_t);
C_Errno_t(C_Int_t) Socket_GenericSock_socketPair(C_Int_t,C_Int_t,C_Int_t,Array(C_Int_t));
C_Time_t Socket_getTimeout_sec(void);
C_SUSeconds_t Socket_getTimeout_usec(void);
extern const C_Int_t Socket_INetSock_Ctl_IPPROTO_TCP;
extern const C_Int_t Socket_INetSock_Ctl_TCP_NODELAY;
void Socket_INetSock_fromAddr(Vector(Word8_t));
void Socket_INetSock_getInAddr(Array(Word8_t));
Word16_t Socket_INetSock_getPort(void);
void Socket_INetSock_toAddr(Vector(Word8_t),Word16_t,Array(Word8_t),Ref(C_Socklen_t));
C_Errno_t(C_Int_t) Socket_listen(C_Sock_t,C_Int_t);
extern const C_Int_t Socket_MSG_CTRUNC;
extern const C_Int_t Socket_MSG_DONTROUTE;
extern const C_Int_t Socket_MSG_DONTWAIT;
extern const C_Int_t Socket_MSG_EOR;
extern const C_Int_t Socket_MSG_OOB;
extern const C_Int_t Socket_MSG_PEEK;
extern const C_Int_t Socket_MSG_TRUNC;
extern const C_Int_t Socket_MSG_WAITALL;
C_Errno_t(C_SSize_t) Socket_recv(C_Sock_t,Array(Word8_t),C_Int_t,C_Size_t,C_Int_t);
C_Errno_t(C_SSize_t) Socket_recvFrom(C_Sock_t,Array(Word8_t),C_Int_t,C_Size_t,C_Int_t,Array(Word8_t),Ref(C_Socklen_t));
C_Errno_t(C_Int_t) Socket_select(Vector(C_Fd_t),Vector(C_Fd_t),Vector(C_Fd_t),Array(C_Int_t),Array(C_Int_t),Array(C_Int_t));
C_Errno_t(C_SSize_t) Socket_sendArr(C_Sock_t,Array(Word8_t),C_Int_t,C_Size_t,C_Int_t);
C_Errno_t(C_SSize_t) Socket_sendArrTo(C_Sock_t,Array(Word8_t),C_Int_t,C_Size_t,C_Int_t,Vector(Word8_t),C_Socklen_t);
C_Errno_t(C_SSize_t) Socket_sendVec(C_Sock_t,Vector(Word8_t),C_Int_t,C_Size_t,C_Int_t);
C_Errno_t(C_SSize_t) Socket_sendVecTo(C_Sock_t,Vector(Word8_t),C_Int_t,C_Size_t,C_Int_t,Vector(Word8_t),C_Socklen_t);
void Socket_setTimeout(C_Time_t,C_SUSeconds_t);
void Socket_setTimeoutNull(void);
extern const C_Int_t Socket_SHUT_RD;
extern const C_Int_t Socket_SHUT_RDWR;
extern const C_Int_t Socket_SHUT_WR;
C_Errno_t(C_Int_t) Socket_shutdown(C_Sock_t,C_Int_t);
extern const C_Int_t Socket_SOCK_DGRAM;
extern const C_Int_t Socket_SOCK_RAW;
extern const C_Int_t Socket_SOCK_SEQPACKET;
extern const C_Int_t Socket_SOCK_STREAM;
extern const C_Size_t Socket_sockAddrStorageLen;
void Socket_UnixSock_fromAddr(Vector(Word8_t),Array(Char8_t),C_Size_t);
C_Size_t Socket_UnixSock_pathLen(Vector(Word8_t));
void Socket_UnixSock_toAddr(NullString8_t,C_Size_t,Array(Word8_t),Ref(C_Socklen_t));
void Stdio_print(String8_t);
void Stdio_printStderr(String8_t);
void Stdio_printStdout(String8_t);
C_Int_t Time_getTimeOfDay(void);
C_Errno_t(C_PId_t) Windows_Process_create(NullString8_t,NullString8_t,NullString8_t,C_Fd_t,C_Fd_t,C_Fd_t);
C_Errno_t(C_Int_t) Windows_Process_terminate(C_PId_t,C_Signal_t);
MLTON_CODEGEN_STATIC_INLINE Word16_t Word16_add(Word16_t,Word16_t);
MLTON_CODEGEN_STATIC_INLINE Word16_t Word16_andb(Word16_t,Word16_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t Word16_equal(Word16_t,Word16_t);
MLTON_CODEGEN_STATIC_INLINE Word16_t Word16_lshift(Word16_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word16_t Word16_neg(Word16_t);
MLTON_CODEGEN_STATIC_INLINE Word16_t Word16_notb(Word16_t);
MLTON_CODEGEN_STATIC_INLINE Word16_t Word16_orb(Word16_t,Word16_t);
MLTON_CODEGEN_STATIC_INLINE Word16_t Word16_rol(Word16_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word16_t Word16_ror(Word16_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word16_t Word16_sub(Word16_t,Word16_t);
MLTON_CODEGEN_STATIC_INLINE Word16_t Word16_xorb(Word16_t,Word16_t);
MLTON_CODEGEN_STATIC_INLINE Word32_t Word32_add(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word32_t Word32_andb(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t Word32_equal(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word32_t Word32_lshift(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word32_t Word32_neg(Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word32_t Word32_notb(Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word32_t Word32_orb(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word32_t Word32_rol(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word32_t Word32_ror(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word32_t Word32_sub(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word32_t Word32_xorb(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word64_t Word64_add(Word64_t,Word64_t);
MLTON_CODEGEN_STATIC_INLINE Word64_t Word64_andb(Word64_t,Word64_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t Word64_equal(Word64_t,Word64_t);
MLTON_CODEGEN_STATIC_INLINE Word64_t Word64_fetch(Ref(Word64_t));