runtime/gen/basis-ffi.sml

val pow = _import "Real64_Math_pow" private : Real64.t * Real64.t -> Real64.t;
val sin = _import "Real64_Math_sin" private : Real64.t -> Real64.t;
val sinh = _import "Real64_Math_sinh" private : Real64.t -> Real64.t;
val sqrt = _import "Real64_Math_sqrt" private : Real64.t -> Real64.t;
val tan = _import "Real64_Math_tan" private : Real64.t -> Real64.t;
val tanh = _import "Real64_Math_tanh" private : Real64.t -> Real64.t;
end
val modf = _import "Real64_modf" private : Real64.t * (Real64.t) ref -> Real64.t;
val move = _import "Real64_move" private : (Real64.t) ref * (Real64.t) ref -> unit;
val mul = _import "Real64_mul" private : Real64.t * Real64.t -> Real64.t;
val muladd = _import "Real64_muladd" private : Real64.t * Real64.t * Real64.t -> Real64.t;
val mulsub = _import "Real64_mulsub" private : Real64.t * Real64.t * Real64.t -> Real64.t;
val neg = _import "Real64_neg" private : Real64.t -> Real64.t;
val realCeil = _import "Real64_realCeil" private : Real64.t -> Real64.t;
val realFloor = _import "Real64_realFloor" private : Real64.t -> Real64.t;
val realTrunc = _import "Real64_realTrunc" private : Real64.t -> Real64.t;
val rndToReal32 = _import "Real64_rndToReal32" private : Real64.t -> Real32.t;
val rndToReal64 = _import "Real64_rndToReal64" private : Real64.t -> Real64.t;
val rndToWordS16 = _import "Real64_rndToWordS16" private : Real64.t -> Int16.t;
val rndToWordS32 = _import "Real64_rndToWordS32" private : Real64.t -> Int32.t;
val rndToWordS64 = _import "Real64_rndToWordS64" private : Real64.t -> Int64.t;
val rndToWordS8 = _import "Real64_rndToWordS8" private : Real64.t -> Int8.t;
val rndToWordU16 = _import "Real64_rndToWordU16" private : Real64.t -> Word16.t;
val rndToWordU32 = _import "Real64_rndToWordU32" private : Real64.t -> Word32.t;
val rndToWordU64 = _import "Real64_rndToWordU64" private : Real64.t -> Word64.t;
val rndToWordU8 = _import "Real64_rndToWordU8" private : Real64.t -> Word8.t;
val round = _import "Real64_round" private : Real64.t -> Real64.t;
val store = _import "Real64_store" private : (Real64.t) ref * Real64.t -> unit;
val strtor = _import "Real64_strtor" private : NullString8.t * C_Int.t -> Real64.t;
val sub = _import "Real64_sub" private : Real64.t * Real64.t -> Real64.t;
end
structure Socket = 
struct
val accept = _import "Socket_accept" private : C_Sock.t * (Word8.t) array * (C_Socklen.t) ref -> (C_Int.t) C_Errno.t;
structure AF = 
struct
val INET = _const "Socket_AF_INET" : C_Int.t;
val INET6 = _const "Socket_AF_INET6" : C_Int.t;
val UNIX = _const "Socket_AF_UNIX" : C_Int.t;
val UNSPEC = _const "Socket_AF_UNSPEC" : C_Int.t;
end
val bind = _import "Socket_bind" private : C_Sock.t * (Word8.t) vector * C_Socklen.t -> (C_Int.t) C_Errno.t;
val close = _import "Socket_close" private : C_Sock.t -> (C_Int.t) C_Errno.t;
val connect = _import "Socket_connect" private : C_Sock.t * (Word8.t) vector * C_Socklen.t -> (C_Int.t) C_Errno.t;
structure Ctl = 
struct
val getATMARK = _import "Socket_Ctl_getATMARK" private : C_Sock.t * (C_Int.t) ref -> (C_Int.t) C_Errno.t;
val getNREAD = _import "Socket_Ctl_getNREAD" private : C_Sock.t * (C_Int.t) ref -> (C_Int.t) C_Errno.t;
val getPeerName = _import "Socket_Ctl_getPeerName" private : C_Sock.t * (Word8.t) array * (C_Socklen.t) ref -> (C_Int.t) C_Errno.t;
val getSockName = _import "Socket_Ctl_getSockName" private : C_Sock.t * (Word8.t) array * (C_Socklen.t) ref -> (C_Int.t) C_Errno.t;
val getSockOptC_Int = _import "Socket_Ctl_getSockOptC_Int" private : C_Sock.t * C_Int.t * C_Int.t * (C_Int.t) ref -> (C_Int.t) C_Errno.t;
val getSockOptC_Linger = _import "Socket_Ctl_getSockOptC_Linger" private : C_Sock.t * C_Int.t * C_Int.t * (C_Int.t) ref * (C_Int.t) ref -> (C_Int.t) C_Errno.t;
val setSockOptC_Int = _import "Socket_Ctl_setSockOptC_Int" private : C_Sock.t * C_Int.t * C_Int.t * C_Int.t -> (C_Int.t) C_Errno.t;
val setSockOptC_Linger = _import "Socket_Ctl_setSockOptC_Linger" private : C_Sock.t * C_Int.t * C_Int.t * C_Int.t * C_Int.t -> (C_Int.t) C_Errno.t;
val SO_ACCEPTCONN = _const "Socket_Ctl_SO_ACCEPTCONN" : C_Int.t;
val SO_BROADCAST = _const "Socket_Ctl_SO_BROADCAST" : C_Int.t;
val SO_DEBUG = _const "Socket_Ctl_SO_DEBUG" : C_Int.t;
val SO_DONTROUTE = _const "Socket_Ctl_SO_DONTROUTE" : C_Int.t;
val SO_ERROR = _const "Socket_Ctl_SO_ERROR" : C_Int.t;
val SO_KEEPALIVE = _const "Socket_Ctl_SO_KEEPALIVE" : C_Int.t;
val SO_LINGER = _const "Socket_Ctl_SO_LINGER" : C_Int.t;
val SO_OOBINLINE = _const "Socket_Ctl_SO_OOBINLINE" : C_Int.t;
val SO_RCVBUF = _const "Socket_Ctl_SO_RCVBUF" : C_Int.t;
val SO_RCVLOWAT = _const "Socket_Ctl_SO_RCVLOWAT" : C_Int.t;
val SO_RCVTIMEO = _const "Socket_Ctl_SO_RCVTIMEO" : C_Int.t;
val SO_REUSEADDR = _const "Socket_Ctl_SO_REUSEADDR" : C_Int.t;
val SO_SNDBUF = _const "Socket_Ctl_SO_SNDBUF" : C_Int.t;
val SO_SNDLOWAT = _const "Socket_Ctl_SO_SNDLOWAT" : C_Int.t;
val SO_SNDTIMEO = _const "Socket_Ctl_SO_SNDTIMEO" : C_Int.t;
val SO_TYPE = _const "Socket_Ctl_SO_TYPE" : C_Int.t;
val SOL_SOCKET = _const "Socket_Ctl_SOL_SOCKET" : C_Int.t;
end
val familyOfAddr = _import "Socket_familyOfAddr" private : (Word8.t) vector -> C_Int.t;
structure GenericSock = 
struct
val socket = _import "Socket_GenericSock_socket" private : C_Int.t * C_Int.t * C_Int.t -> (C_Int.t) C_Errno.t;
val socketPair = _import "Socket_GenericSock_socketPair" private : C_Int.t * C_Int.t * C_Int.t * (C_Int.t) array -> (C_Int.t) C_Errno.t;
end
val getTimeout_sec = _import "Socket_getTimeout_sec" private : unit -> C_Time.t;
val getTimeout_usec = _import "Socket_getTimeout_usec" private : unit -> C_SUSeconds.t;
structure INetSock = 
struct
structure Ctl = 
struct
val IPPROTO_TCP = _const "Socket_INetSock_Ctl_IPPROTO_TCP" : C_Int.t;
val TCP_NODELAY = _const "Socket_INetSock_Ctl_TCP_NODELAY" : C_Int.t;
end
val fromAddr = _import "Socket_INetSock_fromAddr" private : (Word8.t) vector -> unit;
val getInAddr = _import "Socket_INetSock_getInAddr" private : (Word8.t) array -> unit;
val getPort = _import "Socket_INetSock_getPort" private : unit -> Word16.t;
val toAddr = _import "Socket_INetSock_toAddr" private : (Word8.t) vector * Word16.t * (Word8.t) array * (C_Socklen.t) ref -> unit;
end
val listen = _import "Socket_listen" private : C_Sock.t * C_Int.t -> (C_Int.t) C_Errno.t;
val MSG_CTRUNC = _const "Socket_MSG_CTRUNC" : C_Int.t;
val MSG_DONTROUTE = _const "Socket_MSG_DONTROUTE" : C_Int.t;
val MSG_DONTWAIT = _const "Socket_MSG_DONTWAIT" : C_Int.t;
val MSG_EOR = _const "Socket_MSG_EOR" : C_Int.t;
val MSG_OOB = _const "Socket_MSG_OOB" : C_Int.t;
val MSG_PEEK = _const "Socket_MSG_PEEK" : C_Int.t;
val MSG_TRUNC = _const "Socket_MSG_TRUNC" : C_Int.t;
val MSG_WAITALL = _const "Socket_MSG_WAITALL" : C_Int.t;
val recv = _import "Socket_recv" private : C_Sock.t * (Word8.t) array * C_Int.t * C_Size.t * C_Int.t -> (C_SSize.t) C_Errno.t;
val recvFrom = _import "Socket_recvFrom" private : C_Sock.t * (Word8.t) array * C_Int.t * C_Size.t * C_Int.t * (Word8.t) array * (C_Socklen.t) ref -> (C_SSize.t) C_Errno.t;
val select = _import "Socket_select" private : (C_Fd.t) vector * (C_Fd.t) vector * (C_Fd.t) vector * (C_Int.t) array * (C_Int.t) array * (C_Int.t) array -> (C_Int.t) C_Errno.t;
val sendArr = _import "Socket_sendArr" private : C_Sock.t * (Word8.t) array * C_Int.t * C_Size.t * C_Int.t -> (C_SSize.t) C_Errno.t;
val sendArrTo = _import "Socket_sendArrTo" private : C_Sock.t * (Word8.t) array * C_Int.t * C_Size.t * C_Int.t * (Word8.t) vector * C_Socklen.t -> (C_SSize.t) C_Errno.t;
val sendVec = _import "Socket_sendVec" private : C_Sock.t * (Word8.t) vector * C_Int.t * C_Size.t * C_Int.t -> (C_SSize.t) C_Errno.t;
val sendVecTo = _import "Socket_sendVecTo" private : C_Sock.t * (Word8.t) vector * C_Int.t * C_Size.t * C_Int.t * (Word8.t) vector * C_Socklen.t -> (C_SSize.t) C_Errno.t;
val setTimeout = _import "Socket_setTimeout" private : C_Time.t * C_SUSeconds.t -> unit;
val setTimeoutNull = _import "Socket_setTimeoutNull" private : unit -> unit;
val SHUT_RD = _const "Socket_SHUT_RD" : C_Int.t;
val SHUT_RDWR = _const "Socket_SHUT_RDWR" : C_Int.t;
val SHUT_WR = _const "Socket_SHUT_WR" : C_Int.t;
val shutdown = _import "Socket_shutdown" private : C_Sock.t * C_Int.t -> (C_Int.t) C_Errno.t;
structure SOCK = 
struct
val DGRAM = _const "Socket_SOCK_DGRAM" : C_Int.t;
val RAW = _const "Socket_SOCK_RAW" : C_Int.t;
val SEQPACKET = _const "Socket_SOCK_SEQPACKET" : C_Int.t;
val STREAM = _const "Socket_SOCK_STREAM" : C_Int.t;
end
val sockAddrStorageLen = _const "Socket_sockAddrStorageLen" : C_Size.t;
structure UnixSock = 
struct
val fromAddr = _import "Socket_UnixSock_fromAddr" private : (Word8.t) vector * (Char8.t) array * C_Size.t -> unit;
val pathLen = _import "Socket_UnixSock_pathLen" private : (Word8.t) vector -> C_Size.t;
val toAddr = _import "Socket_UnixSock_toAddr" private : NullString8.t * C_Size.t * (Word8.t) array * (C_Socklen.t) ref -> unit;
end
end
structure Stdio = 
struct
val print = _import "Stdio_print" private : String8.t -> unit;
val printStderr = _import "Stdio_printStderr" private : String8.t -> unit;
val printStdout = _import "Stdio_printStdout" private : String8.t -> unit;
end
structure Time = 
struct
val getTimeOfDay = _import "Time_getTimeOfDay" private : (C_Time.t) ref * (C_SUSeconds.t) ref -> C_Int.t;
end
structure Windows = 
struct
structure Process = 
struct
val create = _import "Windows_Process_create" private : NullString8.t * NullString8.t * NullString8.t * C_Fd.t * C_Fd.t * C_Fd.t -> (C_PId.t) C_Errno.t;
val createNull = _import "Windows_Process_createNull" private : NullString8.t * NullString8.t * C_Fd.t * C_Fd.t * C_Fd.t -> (C_PId.t) C_Errno.t;
val getexitcode = _import "Windows_Process_getexitcode" private : C_PId.t * (C_Status.t) ref -> (C_Int.t) C_Errno.t;
val terminate = _import "Windows_Process_terminate" private : C_PId.t * C_Signal.t -> (C_Int.t) C_Errno.t;
end
end
structure Word16 = 
struct
type t = Word16.t
val add = _import "Word16_add" private : Word16.t * Word16.t -> Word16.t;
val andb = _import "Word16_andb" private : Word16.t * Word16.t -> Word16.t;
val equal = _import "Word16_equal" private : Word16.t * Word16.t -> Bool.t;
val lshift = _import "Word16_lshift" private : Word16.t * Word32.t -> Word16.t;
val neg = _import "Word16_neg" private : Word16.t -> Word16.t;
val notb = _import "Word16_notb" private : Word16.t -> Word16.t;
val orb = _import "Word16_orb" private : Word16.t * Word16.t -> Word16.t;
val rol = _import "Word16_rol" private : Word16.t * Word32.t -> Word16.t;
val ror = _import "Word16_ror" private : Word16.t * Word32.t -> Word16.t;
val sub = _import "Word16_sub" private : Word16.t * Word16.t -> Word16.t;
val xorb = _import "Word16_xorb" private : Word16.t * Word16.t -> Word16.t;
end
structure Word32 = 
struct
type t = Word32.t
val add = _import "Word32_add" private : Word32.t * Word32.t -> Word32.t;
val andb = _import "Word32_andb" private : Word32.t * Word32.t -> Word32.t;
val castToReal32 = _import "Word32_castToReal32" private : Word32.t -> Real32.t;
val equal = _import "Word32_equal" private : Word32.t * Word32.t -> Bool.t;
val lshift = _import "Word32_lshift" private : Word32.t * Word32.t -> Word32.t;
val neg = _import "Word32_neg" private : Word32.t -> Word32.t;
val notb = _import "Word32_notb" private : Word32.t -> Word32.t;
val orb = _import "Word32_orb" private : Word32.t * Word32.t -> Word32.t;
val rol = _import "Word32_rol" private : Word32.t * Word32.t -> Word32.t;
val ror = _import "Word32_ror" private : Word32.t * Word32.t -> Word32.t;
val sub = _import "Word32_sub" private : Word32.t * Word32.t -> Word32.t;
val xorb = _import "Word32_xorb" private : Word32.t * Word32.t -> Word32.t;
end
structure Word64 = 
struct
type t = Word64.t
val add = _import "Word64_add" private : Word64.t * Word64.t -> Word64.t;
val andb = _import "Word64_andb" private : Word64.t * Word64.t -> Word64.t;
val castToReal64 = _import "Word64_castToReal64" private : Word64.t -> Real64.t;
val equal = _import "Word64_equal" private : Word64.t * Word64.t -> Bool.t;
val fetch = _import "Word64_fetch" private : (Word64.t) ref -> Word64.t;
